Excluir bugado.